Xors3dIndie(withSamples)_750/headers/CPP/inc/xors3d.h

// Object handle typedef
typedef int Handle;
X3DDECL void X3DCALL xSetSurfaceEffect(Handle surface, Handle effect, int index = -1);
X3DDECL void X3DCALL xSetBonesArrayName(Handle entity, const char * arrayName, int layer = -1);
X3DDECL void X3DCALL xSurfaceBonesArrayName(Handle surface, const char * arrayName, int layer = -1);
X3DDECL void X3DCALL xSetEffectInt(Handle entity, const char * name, int value, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectInt(Handle surface, const char * name, int value, int layer = -1);
X3DDECL void X3DCALL xSetEffectFloat(Handle entity, const char * name, float value, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectFloat(Handle surface, const char * name, float value, int layer = -1);
X3DDECL void X3DCALL xSetEffectBool(Handle entity, const char * name, bool value, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectBool(Handle surface, const char * name, bool value, int layer = -1);
X3DDECL void X3DCALL xSetEffectVector(Handle entity, const char * name, float x, float y, float z, float w = 0.0f, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectVector(Handle surface, const char * name, float x, float y, float z, float w = 0.0f, int layer = -1);
X3DDECL void X3DCALL xSetEffectVectorArray(Handle entity, const char * name, Handle value, int count, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectVectorArray(Handle surface, const char * name, Handle value, int count, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectMatrixArray(Handle surface, const char * name, Handle value, int count, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectFloatArray(Handle surface, const char * name, Handle value, int count, int layer = -1);
X3DDECL void X3DCALL xSurfaceEffectIntArray(Handle surface, const char * name, Handle value, int count, int layer = -1);
X3DDECL void X3DCALL xSetEffectMatrixArray(Handle entity, const char * name, Handle value, int count, int layer = -1);
X3DDECL void X3DCALL xSetEffectFloatArray(Handle entity, const char * name, Handle value, int count, int layer = -1);
X3DDECL void X3DCALL xSetEffectIntArray(Handle entity, const char * name, Handle value, int count, int layer = -1);
X3DDECL Handle X3DCALL xCreateBufferVectors(int count);
X3DDECL void X3DCALL xBufferVectorsSetElement(Handle buffer, int number, float x, float y, float z, float w);
X3DDECL Handle X3DCALL xCreateBufferMatrix(int count);
X3DDECL void X3DCALL xBufferMatrixSetElement(Handle buffer, int number, Handle matrix);
X3DDECL Handle X3DCALL xBufferMatrixGetElement(Handle buffer, int number);
X3DDECL Handle X3DCALL xCreateBufferFloats(int count);
X3DDECL void X3DCALL xBufferFloatsSetElement(Handle buffer, int number, float value);
X3DDECL float X3DCALL xBufferFloatsGetElement(Handle buffer, int number);
X3DDECL void X3DCALL xBufferDelete(Handle buffer);