Xors3dIndie(withSamples)_750/headers/C#/xors3d.cs


	public static void SetEntityEffect(int entity, int effect)
	{
		 SetEntityEffect(entity, effect, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetSurfaceEffect")]
	public static extern void SetSurfaceEffect(int surface, int effect, int index);

	public static void SetSurfaceEffect(int surface, int effect)
	{
		 SetSurfaceEffect(surface, effect, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetBonesArrayName")]
	public static extern void SetBonesArrayName_(int entity, StringBuilder arrayName, int layer);
	public static void SetBonesArrayName(int entity, string arrayName, int layer)
	{
		SetBonesArrayName_(entity, new StringBuilder(arrayName), layer);
	}
	public static void SetBonesArrayName(int entity, string arrayName)
	{
		 SetBonesArrayName(entity, arrayName, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceBonesArrayName")]
	public static extern void SurfaceBonesArrayName_(int surface, StringBuilder arrayName, int layer);
	public static void SurfaceBonesArrayName(int surface, string arrayName, int layer)
	{
		SurfaceBonesArrayName_(surface, new StringBuilder(arrayName), layer);
	}
	public static void SurfaceBonesArrayName(int surface, string arrayName)
	{
		 SurfaceBonesArrayName(surface, arrayName, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectInt")]
	public static extern void SetEffectInt_(int entity, StringBuilder name, int value, int layer);
	public static void SetEffectInt(int entity, string name, int value, int layer)
	{
		SetEffectInt_(entity, new StringBuilder(name), value, layer);
	}
	public static void SetEffectInt(int entity, string name, int value)
	{
		 SetEffectInt(entity, name, value, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectInt")]
	public static extern void SurfaceEffectInt_(int surface, StringBuilder name, int value, int layer);
	public static void SurfaceEffectInt(int surface, string name, int value, int layer)
	{
		SurfaceEffectInt_(surface, new StringBuilder(name), value, layer);
	}
	public static void SurfaceEffectInt(int surface, string name, int value)
	{
		 SurfaceEffectInt(surface, name, value, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectFloat")]
	public static extern void SetEffectFloat_(int entity, StringBuilder name, float value, int layer);
	public static void SetEffectFloat(int entity, string name, float value, int layer)
	{
		SetEffectFloat_(entity, new StringBuilder(name), value, layer);
	}
	public static void SetEffectFloat(int entity, string name, float value)
	{
		 SetEffectFloat(entity, name, value, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectFloat")]
	public static extern void SurfaceEffectFloat_(int surface, StringBuilder name, float value, int layer);
	public static void SurfaceEffectFloat(int surface, string name, float value, int layer)
	{
		SurfaceEffectFloat_(surface, new StringBuilder(name), value, layer);
	}
	public static void SurfaceEffectFloat(int surface, string name, float value)
	{
		 SurfaceEffectFloat(surface, name, value, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectBool")]
	public static extern void SetEffectBool_(int entity, StringBuilder name, bool value, int layer);
	public static void SetEffectBool(int entity, string name, bool value, int layer)
	{
		SetEffectBool_(entity, new StringBuilder(name), value, layer);
	}
	public static void SetEffectBool(int entity, string name, bool value)
	{
		 SetEffectBool(entity, name, value, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectBool")]
	public static extern void SurfaceEffectBool_(int surface, StringBuilder name, bool value, int layer);
	public static void SurfaceEffectBool(int surface, string name, bool value, int layer)
	{
		SurfaceEffectBool_(surface, new StringBuilder(name), value, layer);
	}
	public static void SurfaceEffectBool(int surface, string name, bool value)
	{
		 SurfaceEffectBool(surface, name, value, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectVector")]
	public static extern void SetEffectVector_(int entity, StringBuilder name, float x, float y, float z, float w, int layer);
	public static void SetEffectVector(int entity, string name, float x, float y, float z, float w, int layer)
	{
		SetEffectVector_(entity, new StringBuilder(name), x, y, z, w, layer);
	}
	public static void SetEffectVector(int entity, string name, float x, float y, float z, float w)
	{
		 SetEffectVector(entity, name, x, y, z, w, -1);
	}
	public static void SetEffectVector(int entity, string name, float x, float y, float z)
	{
		 SetEffectVector(entity, name, x, y, z, 0.0f, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectVector")]
	public static extern void SurfaceEffectVector_(int surface, StringBuilder name, float x, float y, float z, float w, int layer);
	public static void SurfaceEffectVector(int surface, string name, float x, float y, float z, float w, int layer)
	{
		SurfaceEffectVector_(surface, new StringBuilder(name), x, y, z, w, layer);
	}
	public static void SurfaceEffectVector(int surface, string name, float x, float y, float z, float w)
	{
		 SurfaceEffectVector(surface, name, x, y, z, w, -1);
	}
	public static void SurfaceEffectVector(int surface, string name, float x, float y, float z)
	{
		 SurfaceEffectVector(surface, name, x, y, z, 0.0f, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectVectorArray")]
	public static extern void SetEffectVectorArray_(int entity, StringBuilder name, int value, int count, int layer);
	public static void SetEffectVectorArray(int entity, string name, int value, int count, int layer)
	{
		SetEffectVectorArray_(entity, new StringBuilder(name), value, count, layer);
	}
	public static void SetEffectVectorArray(int entity, string name, int value, int count)
	{
		 SetEffectVectorArray(entity, name, value, count, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectVectorArray")]
	public static extern void SurfaceEffectVectorArray_(int surface, StringBuilder name, int value, int count, int layer);
	public static void SurfaceEffectVectorArray(int surface, string name, int value, int count, int layer)
	{
		SurfaceEffectVectorArray_(surface, new StringBuilder(name), value, count, layer);
	}
	public static void SurfaceEffectVectorArray(int surface, string name, int value, int count)
	{
		 SurfaceEffectVectorArray(surface, name, value, count, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectMatrixArray")]
	public static extern void SurfaceEffectMatrixArray_(int surface, StringBuilder name, int value, int count, int layer);
	public static void SurfaceEffectMatrixArray(int surface, string name, int value, int count, int layer)
	{
		SurfaceEffectMatrixArray_(surface, new StringBuilder(name), value, count, layer);
	}
	public static void SurfaceEffectMatrixArray(int surface, string name, int value, int count)
	{
		 SurfaceEffectMatrixArray(surface, name, value, count, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectFloatArray")]
	public static extern void SurfaceEffectFloatArray_(int surface, StringBuilder name, int value, int count, int layer);
	public static void SurfaceEffectFloatArray(int surface, string name, int value, int count, int layer)
	{
		SurfaceEffectFloatArray_(surface, new StringBuilder(name), value, count, layer);
	}
	public static void SurfaceEffectFloatArray(int surface, string name, int value, int count)
	{
		 SurfaceEffectFloatArray(surface, name, value, count, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSurfaceEffectIntArray")]
	public static extern void SurfaceEffectIntArray_(int surface, StringBuilder name, int value, int count, int layer);
	public static void SurfaceEffectIntArray(int surface, string name, int value, int count, int layer)
	{
		SurfaceEffectIntArray_(surface, new StringBuilder(name), value, count, layer);
	}
	public static void SurfaceEffectIntArray(int surface, string name, int value, int count)
	{
		 SurfaceEffectIntArray(surface, name, value, count, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectMatrixArray")]
	public static extern void SetEffectMatrixArray_(int entity, StringBuilder name, int value, int count, int layer);
	public static void SetEffectMatrixArray(int entity, string name, int value, int count, int layer)
	{
		SetEffectMatrixArray_(entity, new StringBuilder(name), value, count, layer);
	}
	public static void SetEffectMatrixArray(int entity, string name, int value, int count)
	{
		 SetEffectMatrixArray(entity, name, value, count, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectFloatArray")]
	public static extern void SetEffectFloatArray_(int entity, StringBuilder name, int value, int count, int layer);
	public static void SetEffectFloatArray(int entity, string name, int value, int count, int layer)
	{
		SetEffectFloatArray_(entity, new StringBuilder(name), value, count, layer);
	}
	public static void SetEffectFloatArray(int entity, string name, int value, int count)
	{
		 SetEffectFloatArray(entity, name, value, count, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xSetEffectIntArray")]
	public static extern void SetEffectIntArray_(int entity, StringBuilder name, int value, int count, int layer);
	public static void SetEffectIntArray(int entity, string name, int value, int count, int layer)
	{
		SetEffectIntArray_(entity, new StringBuilder(name), value, count, layer);
	}
	public static void SetEffectIntArray(int entity, string name, int value, int count)
	{
		 SetEffectIntArray(entity, name, value, count, -1);
	}
	[DllImport("xors3d.dll", EntryPoint = "xCreateBufferVectors")]
	public static extern int CreateBufferVectors(int count);

	[DllImport("xors3d.dll", EntryPoint = "xBufferVectorsSetElement")]
	public static extern void BufferVectorsSetElement(int buffer, int number, float x, float y, float z, float w);

	[DllImport("xors3d.dll", EntryPoint = "xCreateBufferMatrix")]
	public static extern int CreateBufferMatrix(int count);

	[DllImport("xors3d.dll", EntryPoint = "xBufferMatrixSetElement")]
	public static extern void BufferMatrixSetElement(int buffer, int number, int matrix);

	[DllImport("xors3d.dll", EntryPoint = "xBufferMatrixGetElement")]
	public static extern int BufferMatrixGetElement(int buffer, int number);

	[DllImport("xors3d.dll", EntryPoint = "xCreateBufferFloats")]
	public static extern int CreateBufferFloats(int count);

	[DllImport("xors3d.dll", EntryPoint = "xBufferFloatsSetElement")]
	public static extern void BufferFloatsSetElement(int buffer, int number, float value);

	[DllImport("xors3d.dll", EntryPoint = "xBufferFloatsGetElement")]
	public static extern float BufferFloatsGetElement(int buffer, int number);

	[DllImport("xors3d.dll", EntryPoint = "xBufferDelete")]
	public static extern void BufferDelete(int buffer);
